<resources>
    <string name="app_name">Slow-Motion Video Maker</string>
    <string name="background">Background</string>
    <string name="slow_motion_video_maker">Slow-Motion Video Maker</string>

    <string name="drag_slider_for_trimming">Drag slider for trimming</string>
    <string name="done">Done</string>
    <string name="trim_video">Trim Video</string>

    <string name="save">Save</string>
    <string name="error_select_smaller_video">Select the video smaller than 4 minutes</string>
    <string name="not_supported_video">Video format is not supported. Would you like to convert avi to mp4 format?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_00_00">00:00</string>
    <string name="crop">Crop</string>
    <string name="trim">Trim</string>
    <string name="saved">Saved</string>
    <string name="pick_video">Pick Video</string>
    <string name="record">Record</string>
    <string name="create">Create</string>
    <string name="_00_00_">00:00</string>
    <string name="_0">0</string>
    <string name="speaker">Speaker</string>
    <string name="move_pointer_to_select_the_speed_of_video">Move pointer to select the speed</string>
    <string name="effect">Effect</string>
    <string name="content_settings">Content Settings</string>
    <string name="click_to_crop">Select aspect ratio to Preview video</string>
    <string name="_9_16">9:16</string>
    <string name="free">Free</string>
    <string name="_1_1">1:1</string>
    <string name="_16_9">16:9</string>
    <string name="ok">OK</string>
    <string name="permissions">Permissions</string>
    <string name="not_now">Not now</string>
    <string name="my_text">Empty Studio?\nNo problem\! Tap \"Create Now\" and unleash the magic of cropping in your videos.</string>
    <string name="my_text2">Empty Studio?\nNo problem\! Tap \"Create Now\" and unleash the magic of slow-motion in your videos.</string>
    <string name="my_text3">Empty Studio?\nNo problem\! Tap \"Create Now\" and unleash the magic of trimming in your videos.</string>

    <string name="create_new">Create New</string>
    <string name="quick_effortless_safe"><![CDATA[Quick, Effortless & Safe]]></string>
    <string name="slow_motion">Slow-Motion</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="gallerydialog">Ready to select video from your Gallery? Simply tap \"Proceed\"</string>
    <string name="cameradialog">Ready to record video from your camera? Simply tap \"Proceed\"</string>
</resources>