<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activities.PreSplashActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_90sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/pre_splash_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp"
        android:fontFamily="@font/fredokaregular"
        android:text="@string/slow_motion"
        android:textColor="#FCC203"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@id/TV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_2sdp"
        android:fontFamily="@font/fredokalight"
        android:text="Video Maker"
        android:letterSpacing="0.2"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:src="@drawable/rectangle_splash"
        app:layout_constraintBottom_toTopOf="@id/TV1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/TV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fredokalight"
        android:text="@string/quick_effortless_safe"
        android:textColor="@color/white"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/animationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_splash" />

    <LinearLayout
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/letsGo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FCC203" />

        <TextView
            android:id="@+id/TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredokaregular"
            android:text="I Accept Privacy Policy and Terms."
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp" />

    </LinearLayout>


    <Button
        android:id="@+id/letsGo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_30sdp"
        android:backgroundTint="#FDC005"
        android:layout_marginStart="@dimen/_11sdp"
        android:fontFamily="@font/fredokamedium"
        android:paddingStart="@dimen/_70sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingEnd="@dimen/_70sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/let_s_start"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>